agregue hombre y mujer

--- a/compra.html
+++ b/compra.html
@@ -37,8 +37,8 @@
               Productos
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <!-- <li><a class="dropdown-item" href="./pagina/mujer.html">Mujer</a></li> -->
-              <!-- <li><a class="dropdown-item" href="./pagina/hombre.html">Hombre</a></li> -->
+              <li><a class="dropdown-item" href="./pagina/mujer.html">Mujer</a></li>
+              <li><a class="dropdown-item" href="./pagina/hombre.html">Hombre</a></li>
             </ul>
           </li>
 
