--- a/pagina/Politicas-devolucion.html
+++ b/pagina/Politicas-devolucion.html
@@ -33,8 +33,8 @@
                     Productos
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <!-- <li><a class="dropdown-item" href="../pagina/mujer.html">Mujer</a></li> -->
-                    <!-- <li><a class="dropdown-item" href="../pagina/hombre.html">Hombre</a></li> -->
+                    <li><a class="dropdown-item" href="../pagina/mujer.html">Mujer</a></li>
+                    <li><a class="dropdown-item" href="../pagina/hombre.html">Hombre</a></li>
                   </ul>
                 </li>
                 
